@@ -15,6 +15,7 @@
 /uploads/ckeditor/image/*.jpg
 /uploads/gallery/pics/*.jpg
 /uploads/gallery/thumbs/*.jpg
+/uploads/games/[1-9].gif
 /uploads/imprint/*.txt
 /uploads/logs/actions/*.log
 /uploads/logs/errors/*.log
